compiling_error.txt
C:\Users\Mark\Documents\GitHub\helloworld\helloworld.cpp: In function 'int main()':
C:\Users\Mark\Documents\GitHub\helloworld\helloworld.cpp:6:28: error: expected ';' before 'bob'
     cout << "Hello, World!"
                            ^
                            ;
     bob = 3
     ~~~                     
